--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-slate
-title: SafeGenes Mutation Accumulation Experiment
-author: Michael Overton
+title: Gene Drive Mutation Accumulation Project
+author: Michael S. Overton
+author: Sean E. Guy
+author: Sergey Kryazhimskiy
