--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 title: Gene Drive Mutation Accumulation Project
 author: Michael S. Overton
-author: Sean E. Guy
-author: Sergey Kryazhimskiy
+# author: Sean E. Guy
+# author: Sergey Kryazhimskiy
